--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -235,6 +235,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-top: 0;
   padding: 260px 0 100px 0;
   background-position: top center;
+  position: relative;
   background-size: cover;
   background-repeat: no-repeat;
 }
