--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -306,7 +306,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
 }
 .skill-bx {
-  background: #151515;
+  background: rgba(202, 210, 197, 0.2);
+  backdrop-filter: blur(10px);
   border-radius: 64px;
   text-align: center;
   padding: 60px 50px;
@@ -329,6 +330,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
 }
 .skill-slider .item img {
+  width: 50%;
+  margin: 0 auto 15px auto;
+}
+.skill-slider .item:hover img {
+  z-index: 1;
+	transition: 0.3s ease-in-out;
   width: 50%;
   margin: 0 auto 15px auto;
 }
