--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -349,9 +349,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Projects Css ************/
 .project {
-  padding: 80px 0;
+  padding: 80px ;
   position: relative;
-  background-color: black;
+  background: rgba(202, 210, 197, 0.2);
+  backdrop-filter: blur(10px);
+  
 }
 .project h2 {
 	font-size: 45px;
@@ -359,7 +361,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
 }
 .project p {
-  color: #B8B8B8;
+  color: #CAD2C5;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -396,7 +398,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     position: absolute;
     width: 0;
     height: 100%;
-    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    background: linear-gradient(90.21deg, rgba(82, 121, 111, 1) -5.91%, rgba(53, 79, 82, 1) 111.58%);
     top: 0;
     left: 0;
     z-index: -1;
@@ -406,18 +408,18 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     width: 100% !important;
 }
 .project .nav.nav-pills .nav-link.active {
-    border: 1px solid rgba(255, 255, 255, 1);
+    border: 1px solid #CAD2C5;
 }
 .nav-link#projects-tabs-tab-first {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba#CAD2C5;
   border-radius: 55px 0px 0px 55px;
 }
 .nav-link#projects-tabs-tab-second {
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid #CAD2C5;
+  border-bottom: 1px solid #CAD2C5;
 }
 .nav-link#projects-tabs-tab-third {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid #CAD2C5;
   border-radius: 0 55px 55px 0;
 }
 .proj-imgbx {
@@ -428,12 +430,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .proj-imgbx::before {
   content: "";
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  background: linear-gradient(90.21deg, rgba(82, 121, 111, 0.5) -5.91%, rgba(53, 79, 82, 0.5) 111.58%);
   opacity: 0.85;
   position: absolute;
   width: 100%;
   height: 0;
   transition: 0.4s ease-in-out;
+  backdrop-filter: blur(10px);
+
 }
 .proj-imgbx:hover::before {
   height: 100%;
@@ -475,7 +479,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Projects Css ************/
 .contact {
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  background: linear-gradient(90.21deg, rgba(82, 121, 111, 1) -5.91%, rgba(53, 79, 82, 1) 111.58%);
   padding: 60px 0 200px 0;
 }
 .contact img {
@@ -577,7 +581,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .new-email-bx::before {
   content: "";
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  background: linear-gradient(90.21deg, rgba(82, 121, 111, 1) -5.91%, rgba(53, 79, 82, 1) 111.58%);
   border-radius: 20px;
   position: absolute;
   z-index: -1;
@@ -606,7 +610,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 0 15px;
 }
 .new-email-bx button {
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  background: linear-gradient(90.21deg, rgba(82, 121, 111, 1) -5.91%, rgba(53, 79, 82, 1) 111.58%);
   padding: 20px 65px;
   color: #fff;
   font-weight: 500;
